Add links en nav

--- a/Mercado-Liebre/views/home.html
+++ b/Mercado-Liebre/views/home.html
@@ -13,14 +13,14 @@
         <p>Comprá en cuotas y sin tarjeta de crédito</p>
         <nav>
             <ul>
-                <li>Ofertas</li>
-                <li>Tiendas Oficiales</li>
-                <li>Vender</li>
-                <li>Ayuda</li>
+                <li><a href='./ofertas.html'>Ofertas</a></li>
+                <li><a href='./tiendas-oficiales.html'>Tiendas Oficiales</a></li>
+                <li><a href='./vender.html'>Vender</a></li>
+                <li><a href='./ayuda.html'>Ayuda</a></li>
 
-                <li>Creá tu cuenta</li>
-                <li>Ingresá</li>
-                <li>Mis compras</li>
+                <li><a href='./crea-tu-cuenta.html'>Creá tu cuenta</a></li>
+                <li><a href='./ingresa.html'>Ingresá</a></li>
+                <li><a href='./mis-compras.html'>Mis compras</a></li>
             </ul>
         </nav>
     </header>
