--- a/Mercado-Liebre/views/home.html
+++ b/Mercado-Liebre/views/home.html
@@ -16,8 +16,7 @@
                 <li><a href='./ofertas.html'>Ofertas</a></li>
                 <li><a href='./tiendas-oficiales.html'>Tiendas Oficiales</a></li>
                 <li><a href='./vender.html'>Vender</a></li>
-                <li><a href='./ayuda.html'>Ayuda</a></li>
-
+                <li><a href='./ayuda.html'>Ayuda</a></li><br>
                 <li><a href='./crea-tu-cuenta.html'>Creá tu cuenta</a></li>
                 <li><a href='./ingresa.html'>Ingresá</a></li>
                 <li><a href='./mis-compras.html'>Mis compras</a></li>
