--- a/Mercado-Liebre/views/home.html
+++ b/Mercado-Liebre/views/home.html
@@ -24,6 +24,7 @@
         </nav>
     </header>
     <main>
+        <img src="./images/img-home-banner.jpg" alt="banner">
         <section>
             <h3>Basado en tu última visita</h3>
             <article>
