--- a/Mercado-Liebre/views/home.html
+++ b/Mercado-Liebre/views/home.html
@@ -15,13 +15,13 @@
         <p>Comprá en cuotas y sin tarjeta de crédito</p>
         <nav>
             <ul>
-                <li><a href='./ofertas.html'>Ofertas</a></li>
-                <li><a href='./tiendas-oficiales.html'>Tiendas Oficiales</a></li>
-                <li><a href='./vender.html'>Vender</a></li>
-                <li><a href='./ayuda.html'>Ayuda</a></li><br>
-                <li><a href='./crea-tu-cuenta.html'>Creá tu cuenta</a></li>
-                <li><a href='./ingresa.html'>Ingresá</a></li>
-                <li><a href='./mis-compras.html'>Mis compras</a></li>
+                <li><a href='./ofertas'>Ofertas</a></li>
+                <li><a href='./tiendas-oficiales'>Tiendas Oficiales</a></li>
+                <li><a href='./vender'>Vender</a></li>
+                <li><a href='./ayuda'>Ayuda</a></li><br>
+                <li><a href='./crea-tu-cuenta'>Creá tu cuenta</a></li>
+                <li><a href='./ingresa'>Ingresá</a></li>
+                <li><a href='./mis-compras'>Mis compras</a></li>
             </ul>
         </nav>
     </header>
