--- a/Mercado-Liebre/views/home.html
+++ b/Mercado-Liebre/views/home.html
@@ -5,13 +5,18 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link href="css/styles.css" rel="stylesheet">
+    <link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.3/css/all.min.css" rel="stylesheet">
     <title>Mercado Liebre</title>
 </head>
 
 <body>
     <header>
         <img src="./images/logo-mercado-liebre.svg" alt="Logo">
-        <nav>Lugar para poner la barra de búsqueda</nav>
+        <form>
+            <input type="search" placeholder="Buscar productos, marcas"></input>
+        </form>
+        <i class="fa-solid fa-search"></i>
         <p>Comprá en cuotas y sin tarjeta de crédito</p>
         <nav>
             <ul>
@@ -24,6 +29,9 @@
                 <li><a href='./mis-compras'>Mis compras</a></li>
             </ul>
         </nav>
+        <div class="burger-menu">
+            <i class="fas fa-bars"></i>
+        </div>
     </header>
     <main>
         <img src="./images/img-home-banner.jpg" alt="banner">
@@ -31,66 +39,98 @@
             <h3>Basado en tu última visita</h3>
             <article>
                 <img src="./images/img-cafetera-moulinex.jpg" alt="imagen de cafetera">
-                <p>
+                <p class="precio">
                     $6.770<br>
+                </p>
+                <p class="descuento">
                     40% OFF<br>
+                </p>
+                <p class="descripciones">
                     <strong>Cafetera Moulinex</strong>
                 </p>
             </article>
             <article>
                 <img src="./images/img-macbook-pro-2019.jpg" alt="imagen de macbook">
-                <p>
+                <p class="precio">
                     $230.000<br>
+                </p>
+                <p class="descuento">
                     20% OFF<br>
+                </p>
+                <p class="descripciones">
                     <strong>MacBook Pro 2019</strong>
                 </p>
             </article>
             <article>
                 <img src="./images/img-samsung-galaxy-s10.jpg" alt="imagen de Samsung Galaxy">
-                <p>
+                <p class="precio">
                     $70.500<br>
+                </p>
+                <p class="descuento">
                     10% OFF<br>
+                </p>
+                <p class="descripciones">
                     <strong>Samsung Galaxy S10</strong>
                 </p>
             </article>
             <article>
                 <img src="./images/img-tv-samsung-smart.jpg" alt="imagen de SmartTV">
-                <p>
+                <p class="precio">
                     $23.200<br>
+                </p>
+                <p class="descuento">
                     5% OFF<br>
+                </p>
+                <p class="descripciones">
                     <strong>SmartTV Samsung 43"</strong>
                 </p>
             </article>
             <h3>Sección de Ofertas</h3>
             <article>
                 <img src="./images/img-cafetera-moulinex.jpg" alt="imagen de cafetera">
-                <p>
+                <p class="precio">
                     $6.770<br>
+                </p>
+                <p class="descuento">
                     40% OFF<br>
+                </p>
+                <p class="descripciones">
                     <strong>Cafetera Moulinex</strong>
                 </p>
             </article>
             <article>
                 <img src="./images/img-macbook-pro-2019.jpg" alt="imagen de macbook">
-                <p>
+                <p class="precio">
                     $230.000<br>
+                </p>
+                <p class="descuento">
                     20% OFF<br>
+                </p>
+                <p class="descripciones">
                     <strong>MacBook Pro 2019</strong>
                 </p>
             </article>
             <article>
                 <img src="./images/img-samsung-galaxy-s10.jpg" alt="imagen de Samsung Galaxy">
-                <p>
+                <p class="precio">
                     $70.500<br>
+                </p>
+                <p class="descuento">
                     10% OFF<br>
+                </p>
+                <p class="descripciones">
                     <strong>Samsung Galaxy S10</strong>
                 </p>
             </article>
             <article>
                 <img src="./images/img-tv-samsung-smart.jpg" alt="imagen de SmartTV">
-                <p>
+                <p class="precio">
                     $23.200<br>
+                </p>
+                <p class="descuento">
                     5% OFF<br>
+                </p>
+                <p class="descripciones">
                     <strong>SmartTV Samsung 43"</strong>
                 </p>
             </article>
