Change img width

--- a/Mercado-Liebre/views/home.html
+++ b/Mercado-Liebre/views/home.html
@@ -34,11 +34,11 @@
         </div>
     </header>
     <main>
-        <img src="./images/img-home-banner.jpg" alt="banner">
+        <img src="./images/img-home-banner.jpg" alt="banner-ofertas" width="360">
         <section>
             <h3>Basado en tu última visita</h3>
             <article>
-                <img src="./images/img-cafetera-moulinex.jpg" alt="imagen de cafetera">
+                <img src="./images/img-cafetera-moulinex.jpg" alt="imagen de cafetera" width="360">
                 <p class="precio">
                     $6.770<br>
                 </p>
@@ -50,7 +50,7 @@
                 </p>
             </article>
             <article>
-                <img src="./images/img-macbook-pro-2019.jpg" alt="imagen de macbook">
+                <img src="./images/img-macbook-pro-2019.jpg" alt="imagen de macbook" width="360">
                 <p class="precio">
                     $230.000<br>
                 </p>
@@ -62,7 +62,7 @@
                 </p>
             </article>
             <article>
-                <img src="./images/img-samsung-galaxy-s10.jpg" alt="imagen de Samsung Galaxy">
+                <img src="./images/img-samsung-galaxy-s10.jpg" alt="imagen de Samsung Galaxy" width="360">
                 <p class="precio">
                     $70.500<br>
                 </p>
@@ -74,7 +74,7 @@
                 </p>
             </article>
             <article>
-                <img src="./images/img-tv-samsung-smart.jpg" alt="imagen de SmartTV">
+                <img src="./images/img-tv-samsung-smart.jpg" alt="imagen de SmartTV" width="360">
                 <p class="precio">
                     $23.200<br>
                 </p>
@@ -87,7 +87,7 @@
             </article>
             <h3>Sección de Ofertas</h3>
             <article>
-                <img src="./images/img-cafetera-moulinex.jpg" alt="imagen de cafetera">
+                <img src="./images/img-cafetera-moulinex.jpg" alt="imagen de cafetera" width="360">
                 <p class="precio">
                     $6.770<br>
                 </p>
@@ -99,7 +99,7 @@
                 </p>
             </article>
             <article>
-                <img src="./images/img-macbook-pro-2019.jpg" alt="imagen de macbook">
+                <img src="./images/img-macbook-pro-2019.jpg" alt="imagen de macbook" width="360">
                 <p class="precio">
                     $230.000<br>
                 </p>
@@ -111,7 +111,7 @@
                 </p>
             </article>
             <article>
-                <img src="./images/img-samsung-galaxy-s10.jpg" alt="imagen de Samsung Galaxy">
+                <img src="./images/img-samsung-galaxy-s10.jpg" alt="imagen de Samsung Galaxy" width="360">
                 <p class="precio">
                     $70.500<br>
                 </p>
@@ -123,7 +123,7 @@
                 </p>
             </article>
             <article>
-                <img src="./images/img-tv-samsung-smart.jpg" alt="imagen de SmartTV">
+                <img src="./images/img-tv-samsung-smart.jpg" alt="imagen de SmartTV" width="360">
                 <p class="precio">
                     $23.200<br>
                 </p>
