--- a/Mercado-Liebre/views/home.html
+++ b/Mercado-Liebre/views/home.html
@@ -40,10 +40,10 @@
             <article>
                 <img src="./images/img-cafetera-moulinex.jpg" alt="imagen de cafetera" width="360">
                 <p class="precio">
-                    $6.770<br>
+                    $6.770
                 </p>
                 <p class="descuento">
-                    40% OFF<br>
+                    40% OFF
                 </p>
                 <p class="descripciones">
                     <strong>Cafetera Moulinex</strong>
@@ -52,10 +52,10 @@
             <article>
                 <img src="./images/img-macbook-pro-2019.jpg" alt="imagen de macbook" width="360">
                 <p class="precio">
-                    $230.000<br>
+                    $230.000
                 </p>
                 <p class="descuento">
-                    20% OFF<br>
+                    20% OFF
                 </p>
                 <p class="descripciones">
                     <strong>MacBook Pro 2019</strong>
@@ -64,10 +64,10 @@
             <article>
                 <img src="./images/img-samsung-galaxy-s10.jpg" alt="imagen de Samsung Galaxy" width="360">
                 <p class="precio">
-                    $70.500<br>
+                    $70.500
                 </p>
                 <p class="descuento">
-                    10% OFF<br>
+                    10% OFF
                 </p>
                 <p class="descripciones">
                     <strong>Samsung Galaxy S10</strong>
@@ -76,10 +76,10 @@
             <article>
                 <img src="./images/img-tv-samsung-smart.jpg" alt="imagen de SmartTV" width="360">
                 <p class="precio">
-                    $23.200<br>
+                    $23.200
                 </p>
                 <p class="descuento">
-                    5% OFF<br>
+                    5% OFF
                 </p>
                 <p class="descripciones">
                     <strong>SmartTV Samsung 43"</strong>
@@ -89,10 +89,10 @@
             <article>
                 <img src="./images/img-cafetera-moulinex.jpg" alt="imagen de cafetera" width="360">
                 <p class="precio">
-                    $6.770<br>
+                    $6.770
                 </p>
                 <p class="descuento">
-                    40% OFF<br>
+                    40% OFF
                 </p>
                 <p class="descripciones">
                     <strong>Cafetera Moulinex</strong>
@@ -101,10 +101,10 @@
             <article>
                 <img src="./images/img-macbook-pro-2019.jpg" alt="imagen de macbook" width="360">
                 <p class="precio">
-                    $230.000<br>
+                    $230.000
                 </p>
                 <p class="descuento">
-                    20% OFF<br>
+                    20% OFF
                 </p>
                 <p class="descripciones">
                     <strong>MacBook Pro 2019</strong>
@@ -113,10 +113,10 @@
             <article>
                 <img src="./images/img-samsung-galaxy-s10.jpg" alt="imagen de Samsung Galaxy" width="360">
                 <p class="precio">
-                    $70.500<br>
+                    $70.500
                 </p>
                 <p class="descuento">
-                    10% OFF<br>
+                    10% OFF
                 </p>
                 <p class="descripciones">
                     <strong>Samsung Galaxy S10</strong>
@@ -125,10 +125,10 @@
             <article>
                 <img src="./images/img-tv-samsung-smart.jpg" alt="imagen de SmartTV" width="360">
                 <p class="precio">
-                    $23.200<br>
+                    $23.200
                 </p>
                 <p class="descuento">
-                    5% OFF<br>
+                    5% OFF
                 </p>
                 <p class="descripciones">
                     <strong>SmartTV Samsung 43"</strong>
