--- a/Mercado-Liebre/views/home.html
+++ b/Mercado-Liebre/views/home.html
@@ -6,7 +6,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link href="css/styles.css" rel="stylesheet">
-    <link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.3/css/all.min.css" rel="stylesheet">
+    <script src="https://kit.fontawesome.com/6488dd7609.js" crossorigin="anonymous"></script>
     <title>Mercado Liebre</title>
 </head>
 
@@ -15,8 +15,8 @@
         <img src="./images/logo-mercado-liebre.svg" alt="Logo">
         <form>
             <input type="search" placeholder="Buscar productos, marcas"></input>
+            <i class="fa-solid fa-magnifying-glass"></i>
         </form>
-        <i class="fa-solid fa-search"></i>
         <p>Comprá en cuotas y sin tarjeta de crédito</p>
         <nav>
             <ul>
