--- a/Mercado-Liebre/views/home.html
+++ b/Mercado-Liebre/views/home.html
@@ -12,26 +12,30 @@
 
 <body>
     <header>
-        <img src="./images/logo-mercado-liebre.svg" alt="Logo">
+        <img src="./images/logo-mercado-liebre.svg" alt="Logo" width="360">
         <form>
             <input type="search" placeholder="Buscar productos, marcas"></input>
-            <i class="fa-solid fa-magnifying-glass"></i>
+            <button><i class="fa-solid fa-magnifying-glass"></i></button>
         </form>
-        <p>Comprá en cuotas y sin tarjeta de crédito</p>
+        <p id="cuotas"> <i id="cuotas" class="fa-solid fa-hand-holding-dollar"></i>Comprá en cuotas y sin tarjeta de
+            crédito</p>
         <nav>
-            <ul>
+            <ul class="navbar">
                 <li><a href='./ofertas'>Ofertas</a></li>
                 <li><a href='./tiendas-oficiales'>Tiendas Oficiales</a></li>
                 <li><a href='./vender'>Vender</a></li>
                 <li><a href='./ayuda'>Ayuda</a></li><br>
-                <li><a href='./crea-tu-cuenta'>Creá tu cuenta</a></li>
-                <li><a href='./ingresa'>Ingresá</a></li>
-                <li><a href='./mis-compras'>Mis compras</a></li>
+                <li><a href='./crea-tu-cuenta'>Creá tu cuenta </a><i class="fa-solid fa-id-card"></i></li>
+                <li><a href='./ingresa'>Ingresá </a><i class="fa-solid fa-arrow-right-to-bracket"></i></li>
+                <li><a href='./mis-compras'>Mis compras </a><i class="fa-solid fa-basket-shopping"></i></li>
             </ul>
         </nav>
-        <div class="burger-menu">
-            <i class="fas fa-bars"></i>
+        <div id="burger-menu-cont">
+            <button id="burger-menu">
+                <i class="fas fa-bars"></i>
+            </button>
         </div>
+        <br>
     </header>
     <main>
         <img src="./images/img-home-banner.jpg" alt="banner-ofertas" width="360">
@@ -137,21 +141,28 @@
         </section>
     </main>
     <footer>
+        <br>
         <section>
-            <h4>Pagá con tarjetas o en efectivo</h4>
+            <i id="icon-ft" class="fa-solid fa-credit-card fa-xl"></i>
+            <h3>Pagá con tarjetas o en efectivo</h3>
             <p>Con Mercado Liebre Cash, tenés cuotas sin interés con tarjeta o efectivo en puntos de pago. ¡Y siempre es
                 seguro!</p>
         </section>
+        <br>
         <section>
-            <h4>Envío gratis desde $2.500</h4>
+            <i id="icon-ft" class="fa-solid fa-gift fa-xl"></i>
+            <h3>Envío gratis desde $2.500</h3>
             <p>Solo por estar registrad@ en Mercado Liebre tenés envíos gratis en miles de productos. Es un beneficio de
                 Mercado Puntos</p>
         </section>
+        <br>
         <section>
-            <h4>Seguridad, de principio a fin</h4>
+            <i id="icon-ft" class="fa-solid fa-user-shield fa-xl"></i>
+            <h3>Seguridad, de principio a fin</h3>
             <p>¿No te gusta? ¡Devolvelo! En Mercado Liebre, no hay nada que no puedas hacer, porque estás siempre
                 protegid@</p>
         </section>
+        <br>
         <section>
             <p>Copyright © 1999-2020 MercadoLiebre S.R.L.</p>
         </section>
