--- a/Mercado-Liebre/views/home.html
+++ b/Mercado-Liebre/views/home.html
@@ -43,100 +43,124 @@
             <h3>Basado en tu última visita</h3>
             <article>
                 <img src="./images/img-cafetera-moulinex.jpg" alt="imagen de cafetera" width="360">
-                <p class="precio">
-                    $6.770
-                </p>
-                <p class="descuento">
-                    40% OFF
-                </p>
-                <p class="descripciones">
-                    <strong>Cafetera Moulinex</strong>
-                </p>
+                <div class="product-detail">
+                    <i class="fa-solid fa-truck"></i>
+                    <p class="precio">
+                        $6.770
+                    </p>
+                    <p class="descuento">
+                        40% OFF
+                    </p>
+                    <p class="descripciones">
+                        Cafetera Moulinex
+                    </p>
+                </div>
             </article>
             <article>
                 <img src="./images/img-macbook-pro-2019.jpg" alt="imagen de macbook" width="360">
-                <p class="precio">
-                    $230.000
-                </p>
-                <p class="descuento">
-                    20% OFF
-                </p>
-                <p class="descripciones">
-                    <strong>MacBook Pro 2019</strong>
-                </p>
+                <div class="product-detail">
+                    <i class="fa-solid fa-truck"></i>
+                    <p class="precio">
+                        $230.000
+                    </p>
+                    <p class="descuento">
+                        20% OFF
+                    </p>
+                    <p class="descripciones">
+                        MacBook Pro 2019
+                    </p>
+                </div>
             </article>
             <article>
                 <img src="./images/img-samsung-galaxy-s10.jpg" alt="imagen de Samsung Galaxy" width="360">
-                <p class="precio">
-                    $70.500
-                </p>
-                <p class="descuento">
-                    10% OFF
-                </p>
-                <p class="descripciones">
-                    <strong>Samsung Galaxy S10</strong>
-                </p>
+                <div class="product-detail">
+                    <i class="fa-solid fa-truck"></i>
+                    <p class="precio">
+                        $70.500
+                    </p>
+                    <p class="descuento">
+                        10% OFF
+                    </p>
+                    <p class="descripciones">
+                        Samsung Galaxy S10
+                    </p>
+                </div>
             </article>
             <article>
                 <img src="./images/img-tv-samsung-smart.jpg" alt="imagen de SmartTV" width="360">
-                <p class="precio">
-                    $23.200
-                </p>
-                <p class="descuento">
-                    5% OFF
-                </p>
-                <p class="descripciones">
-                    <strong>SmartTV Samsung 43"</strong>
-                </p>
+                <div class="product-detail">
+                    <i class="fa-solid fa-truck"></i>
+                    <p class="precio">
+                        $23.200
+                    </p>
+                    <p class="descuento">
+                        5% OFF
+                    </p>
+                    <p class="descripciones">
+                        SmartTV Samsung 43"
+                    </p>
+                </div>
             </article>
-            <h3>Sección de Ofertas</h3>
+            <h3>Ofertas</h3>
             <article>
                 <img src="./images/img-cafetera-moulinex.jpg" alt="imagen de cafetera" width="360">
-                <p class="precio">
-                    $6.770
-                </p>
-                <p class="descuento">
-                    40% OFF
-                </p>
-                <p class="descripciones">
-                    <strong>Cafetera Moulinex</strong>
-                </p>
+                <div class="product-detail">
+                    <i class="fa-solid fa-truck"></i>
+                    <p class="precio">
+                        $6.770
+                    </p>
+                    <p class="descuento">
+                        40% OFF
+                    </p>
+                    <p class="descripciones">
+                        Cafetera Moulinex
+                    </p>
+                </div>
             </article>
             <article>
                 <img src="./images/img-macbook-pro-2019.jpg" alt="imagen de macbook" width="360">
-                <p class="precio">
-                    $230.000
-                </p>
-                <p class="descuento">
-                    20% OFF
-                </p>
-                <p class="descripciones">
-                    <strong>MacBook Pro 2019</strong>
-                </p>
+                <div class="product-detail">
+                    <i class="fa-solid fa-truck"></i>
+                    <p class="precio">
+                        $230.000
+                    </p>
+                    <p class="descuento">
+                        20% OFF
+                    </p>
+                    <p class="descripciones">
+                        MacBook Pro 2019
+                    </p>
+                </div>
             </article>
             <article>
                 <img src="./images/img-samsung-galaxy-s10.jpg" alt="imagen de Samsung Galaxy" width="360">
-                <p class="precio">
-                    $70.500
-                </p>
-                <p class="descuento">
-                    10% OFF
-                </p>
-                <p class="descripciones">
-                    <strong>Samsung Galaxy S10</strong>
-                </p>
+                <div class="product-detail">
+                    <i class="fa-solid fa-truck"></i>
+                    <p class="precio">
+                        $70.500
+                    </p>
+                    <p class="descuento">
+                        10% OFF
+                    </p>
+                    <p class="descripciones">
+                        Samsung Galaxy S10
+                    </p>
+                </div>
             </article>
             <article>
                 <img src="./images/img-tv-samsung-smart.jpg" alt="imagen de SmartTV" width="360">
-                <p class="precio">
-                    $23.200
-                </p>
-                <p class="descuento">
-                    5% OFF
-                </p>
-                <p class="descripciones">
-                    <strong>SmartTV Samsung 43"</strong>
-                </p>
+                <div class="product-detail">
+                    <i class="fa-solid fa-truck"></i>
+                    <p class="precio">
+                        $23.200
+                    </p>
+                    <p class="descuento">
+                        5% OFF
+                    </p>
+                    <p class="descripciones">
+                        SmartTV Samsung 43"
+                    </p>
+                </div>
             </article>
         </section>
     </main>
