--- a/Mercado-Liebre/views/home.html
+++ b/Mercado-Liebre/views/home.html
@@ -3,7 +3,6 @@
 
 <head>
     <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link href="css/styles.css" rel="stylesheet">
     <script src="https://kit.fontawesome.com/6488dd7609.js" crossorigin="anonymous"></script>
@@ -12,154 +11,136 @@
 
 <body>
     <header>
-        <img src="./images/logo-mercado-liebre.svg" alt="Logo" width="360">
-        <form>
-            <input type="search" placeholder="Buscar productos, marcas"></input>
-            <button><i class="fa-solid fa-magnifying-glass"></i></button>
-        </form>
-        <p id="cuotas"> <i id="cuotas" class="fa-solid fa-hand-holding-dollar"></i>Comprá en cuotas y sin tarjeta de
-            crédito</p>
+        <div class="top-header">
+            <div class="logo">
+                <img src="./images/logo-mercado-liebre.svg" alt="Logo">
+            </div>
+            <form>
+                <input type="search" placeholder="Buscar productos, marcas"></input>
+                <button><i class="fa-solid fa-magnifying-glass"></i></button>
+            </form>
+            <p id="cuotas"> <i id="cuotas" class="fa-solid fa-hand-holding-dollar"></i>Comprá en cuotas y sin tarjeta de
+                crédito</p>
+        </div>
         <nav>
             <ul class="navbar">
-                <li><a href='./ofertas'>Ofertas</a></li>
-                <li><a href='./tiendas-oficiales'>Tiendas Oficiales</a></li>
-                <li><a href='./vender'>Vender</a></li>
-                <li><a href='./ayuda'>Ayuda</a></li><br>
-                <li><a href='./crea-tu-cuenta'>Creá tu cuenta </a><i class="fa-solid fa-id-card"></i></li>
-                <li><a href='./ingresa'>Ingresá </a><i class="fa-solid fa-arrow-right-to-bracket"></i></li>
-                <li><a href='./mis-compras'>Mis compras </a><i class="fa-solid fa-basket-shopping"></i></li>
+                <li><a href='#'>Ofertas</a></li>
+                <li><a href='#'>Tiendas Oficiales</a></li>
+                <li><a href='.#'>Vender</a></li>
+                <li><a href='.#'>Ayuda</a></li><br>
+                <li><a href='./register'>Creá tu cuenta </a><i class="fa-solid fa-id-card"></i></li>
+                <li><a href='./login'>Ingresá </a><i class="fa-solid fa-arrow-right-to-bracket"></i></li>
+                <li><a href='#'>Mis compras </a><i class="fa-solid fa-basket-shopping"></i></li>
             </ul>
         </nav>
-        <div id="burger-menu-cont">
-            <button id="burger-menu">
-                <i class="fas fa-bars"></i>
-            </button>
+        <div id="burger-menu">
+            <i class="fas fa-bars"></i>
         </div>
         <br>
     </header>
+    <section class="banner">
+        <img src="./images/img-home-banner.jpg" alt="banner-ofertas">
+    </section>
     <main>
-        <img src="./images/img-home-banner.jpg" alt="banner-ofertas" width="360">
         <section>
             <h3>Basado en tu última visita</h3>
             <article>
-                <img src="./images/img-cafetera-moulinex.jpg" alt="imagen de cafetera" width="360">
-                <div class="product-detail">
-                    <i class="fa-solid fa-truck"></i>
-                    <p class="precio">
-                        $6.770
-                    </p>
-                    <p class="descuento">
-                        40% OFF
-                    </p>
-                    <p class="descripciones">
-                        Cafetera Moulinex
-                    </p>
+                <div class="product-box">
+                    <img src="./images/img-cafetera-moulinex.jpg" alt="imagen de cafetera">
+                    <div class="product-detail">
+                        <i class="fa-solid fa-truck"></i>
+                        <p class="precio">$6.770</p>
+                        <p class="descuento">40% OFF</p>
+                        <br>
+                        <p class="descripciones">Cafetera Moulinex</p>
+                    </div>
                 </div>
             </article>
             <article>
-                <img src="./images/img-macbook-pro-2019.jpg" alt="imagen de macbook" width="360">
-                <div class="product-detail">
-                    <i class="fa-solid fa-truck"></i>
-                    <p class="precio">
-                        $230.000
-                    </p>
-                    <p class="descuento">
-                        20% OFF
-                    </p>
-                    <p class="descripciones">
-                        MacBook Pro 2019
-                    </p>
+                <div class="product-box">
+                    <img src="./images/img-macbook-pro-2019.jpg" alt="imagen de macbook">
+                    <div class="product-detail">
+                        <i class="fa-solid fa-truck"></i>
+                        <p class="precio">$230.000</p>
+                        <p class="descuento">20% OFF</p>
+                        <br>
+                        <p class="descripciones">MacBook Pro 2019</p>
+                    </div>
                 </div>
             </article>
             <article>
-                <img src="./images/img-samsung-galaxy-s10.jpg" alt="imagen de Samsung Galaxy" width="360">
-                <div class="product-detail">
-                    <i class="fa-solid fa-truck"></i>
-                    <p class="precio">
-                        $70.500
-                    </p>
-                    <p class="descuento">
-                        10% OFF
-                    </p>
-                    <p class="descripciones">
-                        Samsung Galaxy S10
-                    </p>
+                <div class="product-box">
+                    <img src="./images/img-samsung-galaxy-s10.jpg" alt="imagen de Samsung Galaxy">
+                    <div class="product-detail">
+                        <i class="fa-solid fa-truck"></i>
+                        <p class="precio">$70.500</p>
+                        <p class="descuento">10% OFF</p>
+                        <br>
+                        <p class="descripciones">Samsung Galaxy S10</p>
+                    </div>
                 </div>
             </article>
             <article>
-                <img src="./images/img-tv-samsung-smart.jpg" alt="imagen de SmartTV" width="360">
-                <div class="product-detail">
-                    <i class="fa-solid fa-truck"></i>
-                    <p class="precio">
-                        $23.200
-                    </p>
-                    <p class="descuento">
-                        5% OFF
-                    </p>
-                    <p class="descripciones">
-                        SmartTV Samsung 43"
-                    </p>
+                <div class="product-box">
+                    <img src="./images/img-tv-samsung-smart.jpg" alt="imagen de SmartTV">
+                    <div class="product-detail">
+                        <i class="fa-solid fa-truck"></i>
+                        <p class="precio">$23.200</p>
+                        <p class="descuento">5% OFF</p>
+                        <br>
+                        <p class="descripciones">SmartTV Samsung 43"</p>
+                    </div>
                 </div>
             </article>
+        </section>
+        <section>
             <h3>Ofertas</h3>
             <article>
-                <img src="./images/img-cafetera-moulinex.jpg" alt="imagen de cafetera" width="360">
-                <div class="product-detail">
-                    <i class="fa-solid fa-truck"></i>
-                    <p class="precio">
-                        $6.770
-                    </p>
-                    <p class="descuento">
-                        40% OFF
-                    </p>
-                    <p class="descripciones">
-                        Cafetera Moulinex
-                    </p>
+                <div class="product-box">
+                    <img src="./images/img-cafetera-moulinex.jpg" alt="imagen de cafetera">
+                    <div class="product-detail">
+                        <i class="fa-solid fa-truck"></i>
+                        <p class="precio">$6.770</p>
+                        <p class="descuento">40% OFF</p>
+                        <br>
+                        <p class="descripciones">Cafetera Moulinex</p>
+                    </div>
                 </div>
             </article>
             <article>
-                <img src="./images/img-macbook-pro-2019.jpg" alt="imagen de macbook" width="360">
-                <div class="product-detail">
-                    <i class="fa-solid fa-truck"></i>
-                    <p class="precio">
-                        $230.000
-                    </p>
-                    <p class="descuento">
-                        20% OFF
-                    </p>
-                    <p class="descripciones">
-                        MacBook Pro 2019
-                    </p>
+                <div class="product-box">
+                    <img src="./images/img-macbook-pro-2019.jpg" alt="imagen de macbook">
+                    <div class="product-detail">
+                        <i class="fa-solid fa-truck"></i>
+                        <p class="precio">$230.000</p>
+                        <p class="descuento">20% OFF</p>
+                        <br>
+                        <p class="descripciones">MacBook Pro 2019</p>
+                    </div>
                 </div>
             </article>
             <article>
-                <img src="./images/img-samsung-galaxy-s10.jpg" alt="imagen de Samsung Galaxy" width="360">
-                <div class="product-detail">
-                    <i class="fa-solid fa-truck"></i>
-                    <p class="precio">
-                        $70.500
-                    </p>
-                    <p class="descuento">
-                        10% OFF
-                    </p>
-                    <p class="descripciones">
-                        Samsung Galaxy S10
-                    </p>
+                <div class="product-box">
+                    <img src="./images/img-samsung-galaxy-s10.jpg" alt="imagen de Samsung Galaxy">
+                    <div class="product-detail">
+                        <i class="fa-solid fa-truck"></i>
+                        <p class="precio">$70.500</p>
+                        <p class="descuento">10% OFF</p>
+                        <br>
+                        <p class="descripciones">Samsung Galaxy S10</p>
+                    </div>
                 </div>
             </article>
             <article>
-                <img src="./images/img-tv-samsung-smart.jpg" alt="imagen de SmartTV" width="360">
-                <div class="product-detail">
-                    <i class="fa-solid fa-truck"></i>
-                    <p class="precio">
-                        $23.200
-                    </p>
-                    <p class="descuento">
-                        5% OFF
-                    </p>
-                    <p class="descripciones">
-                        SmartTV Samsung 43"
-                    </p>
+                <div class="product-box">
+                    <img src="./images/img-tv-samsung-smart.jpg" alt="imagen de SmartTV">
+                    <div class="product-detail">
+                        <i class="fa-solid fa-truck"></i>
+                        <p class="precio">$23.200</p>
+                        <p class="descuento">5% OFF</p>
+                        <br>
+                        <p class="descripciones">SmartTV Samsung 43"</p>
+                    </div>
                 </div>
             </article>
         </section>
