--- a/Mercado-Liebre/views/home.html
+++ b/Mercado-Liebre/views/home.html
@@ -15,9 +15,9 @@
             <div class="logo">
                 <img src="./images/logo-mercado-liebre.svg" alt="Logo">
             </div>
-            <form>
-                <input type="search" placeholder="Buscar productos, marcas"></input>
-                <button><i class="fa-solid fa-magnifying-glass"></i></button>
+            <form class="search">
+                <input type="search" placeholder="Buscar productos, marcas"> <button><i
+                        class="fa-solid fa-magnifying-glass"></i></button></input>
             </form>
             <p id="cuotas"> <i id="cuotas" class="fa-solid fa-hand-holding-dollar"></i>Comprá en cuotas y sin tarjeta de
                 crédito</p>
@@ -42,107 +42,91 @@
         <img src="./images/img-home-banner.jpg" alt="banner-ofertas">
     </section>
     <main>
-        <section>
-            <h3>Basado en tu última visita</h3>
-            <article>
-                <div class="product-box">
-                    <img src="./images/img-cafetera-moulinex.jpg" alt="imagen de cafetera">
-                    <div class="product-detail">
-                        <i class="fa-solid fa-truck"></i>
-                        <p class="precio">$6.770</p>
-                        <p class="descuento">40% OFF</p>
-                        <br>
-                        <p class="descripciones">Cafetera Moulinex</p>
-                    </div>
+        <h3>Basado en tu última visita</h3>
+        <section class="products">
+            <div class="product-box">
+                <img src="./images/img-cafetera-moulinex.jpg" alt="imagen de cafetera">
+                <div class="product-detail">
+                    <i class="fa-solid fa-truck"></i>
+                    <p class="precio">$6.770</p>
+                    <p class="descuento">40% OFF</p>
+                    <br>
+                    <p class="descripciones">Cafetera Moulinex</p>
                 </div>
-            </article>
-            <article>
-                <div class="product-box">
-                    <img src="./images/img-macbook-pro-2019.jpg" alt="imagen de macbook">
-                    <div class="product-detail">
-                        <i class="fa-solid fa-truck"></i>
-                        <p class="precio">$230.000</p>
-                        <p class="descuento">20% OFF</p>
-                        <br>
-                        <p class="descripciones">MacBook Pro 2019</p>
-                    </div>
+            </div>
+            <div class="product-box">
+                <img src="./images/img-macbook-pro-2019.jpg" alt="imagen de macbook">
+                <div class="product-detail">
+                    <i class="fa-solid fa-truck"></i>
+                    <p class="precio">$230.000</p>
+                    <p class="descuento">20% OFF</p>
+                    <br>
+                    <p class="descripciones">MacBook Pro 2019</p>
                 </div>
-            </article>
-            <article>
-                <div class="product-box">
-                    <img src="./images/img-samsung-galaxy-s10.jpg" alt="imagen de Samsung Galaxy">
-                    <div class="product-detail">
-                        <i class="fa-solid fa-truck"></i>
-                        <p class="precio">$70.500</p>
-                        <p class="descuento">10% OFF</p>
-                        <br>
-                        <p class="descripciones">Samsung Galaxy S10</p>
-                    </div>
+            </div>
+            <div class="product-box">
+                <img src="./images/img-samsung-galaxy-s10.jpg" alt="imagen de Samsung Galaxy">
+                <div class="product-detail">
+                    <i class="fa-solid fa-truck"></i>
+                    <p class="precio">$70.500</p>
+                    <p class="descuento">10% OFF</p>
+                    <br>
+                    <p class="descripciones">Samsung Galaxy S10</p>
                 </div>
-            </article>
-            <article>
-                <div class="product-box">
-                    <img src="./images/img-tv-samsung-smart.jpg" alt="imagen de SmartTV">
-                    <div class="product-detail">
-                        <i class="fa-solid fa-truck"></i>
-                        <p class="precio">$23.200</p>
-                        <p class="descuento">5% OFF</p>
-                        <br>
-                        <p class="descripciones">SmartTV Samsung 43"</p>
-                    </div>
+            </div>
+            <div class="product-box">
+                <img src="./images/img-tv-samsung-smart.jpg" alt="imagen de SmartTV">
+                <div class="product-detail">
+                    <i class="fa-solid fa-truck"></i>
+                    <p class="precio">$23.200</p>
+                    <p class="descuento">5% OFF</p>
+                    <br>
+                    <p class="descripciones">SmartTV Samsung 43"</p>
                 </div>
-            </article>
+            </div>
         </section>
-        <section>
-            <h3>Ofertas</h3>
-            <article>
-                <div class="product-box">
-                    <img src="./images/img-cafetera-moulinex.jpg" alt="imagen de cafetera">
-                    <div class="product-detail">
-                        <i class="fa-solid fa-truck"></i>
-                        <p class="precio">$6.770</p>
-                        <p class="descuento">40% OFF</p>
-                        <br>
-                        <p class="descripciones">Cafetera Moulinex</p>
-                    </div>
+        <h3>Ofertas</h3>
+        <section class="products">
+            <div class="product-box">
+                <img src="./images/img-cafetera-moulinex.jpg" alt="imagen de cafetera">
+                <div class="product-detail">
+                    <i class="fa-solid fa-truck"></i>
+                    <p class="precio">$6.770</p>
+                    <p class="descuento">40% OFF</p>
+                    <br>
+                    <p class="descripciones">Cafetera Moulinex</p>
                 </div>
-            </article>
-            <article>
-                <div class="product-box">
-                    <img src="./images/img-macbook-pro-2019.jpg" alt="imagen de macbook">
-                    <div class="product-detail">
-                        <i class="fa-solid fa-truck"></i>
-                        <p class="precio">$230.000</p>
-                        <p class="descuento">20% OFF</p>
-                        <br>
-                        <p class="descripciones">MacBook Pro 2019</p>
-                    </div>
+            </div>
+            <div class="product-box">
+                <img src="./images/img-macbook-pro-2019.jpg" alt="imagen de macbook">
+                <div class="product-detail">
+                    <i class="fa-solid fa-truck"></i>
+                    <p class="precio">$230.000</p>
+                    <p class="descuento">20% OFF</p>
+                    <br>
+                    <p class="descripciones">MacBook Pro 2019</p>
                 </div>
-            </article>
-            <article>
-                <div class="product-box">
-                    <img src="./images/img-samsung-galaxy-s10.jpg" alt="imagen de Samsung Galaxy">
-                    <div class="product-detail">
-                        <i class="fa-solid fa-truck"></i>
-                        <p class="precio">$70.500</p>
-                        <p class="descuento">10% OFF</p>
-                        <br>
-                        <p class="descripciones">Samsung Galaxy S10</p>
-                    </div>
+            </div>
+            <div class="product-box">
+                <img src="./images/img-samsung-galaxy-s10.jpg" alt="imagen de Samsung Galaxy">
+                <div class="product-detail">
+                    <i class="fa-solid fa-truck"></i>
+                    <p class="precio">$70.500</p>
+                    <p class="descuento">10% OFF</p>
+                    <br>
+                    <p class="descripciones">Samsung Galaxy S10</p>
                 </div>
-            </article>
-            <article>
-                <div class="product-box">
-                    <img src="./images/img-tv-samsung-smart.jpg" alt="imagen de SmartTV">
-                    <div class="product-detail">
-                        <i class="fa-solid fa-truck"></i>
-                        <p class="precio">$23.200</p>
-                        <p class="descuento">5% OFF</p>
-                        <br>
-                        <p class="descripciones">SmartTV Samsung 43"</p>
-                    </div>
+            </div>
+            <div class="product-box">
+                <img src="./images/img-tv-samsung-smart.jpg" alt="imagen de SmartTV">
+                <div class="product-detail">
+                    <i class="fa-solid fa-truck"></i>
+                    <p class="precio">$23.200</p>
+                    <p class="descuento">5% OFF</p>
+                    <br>
+                    <p class="descripciones">SmartTV Samsung 43"</p>
                 </div>
-            </article>
+            </div>
         </section>
     </main>
     <footer>
