--- a/Mercado-Liebre/views/home.html
+++ b/Mercado-Liebre/views/home.html
@@ -15,19 +15,21 @@
             <div class="logo">
                 <img src="./images/logo-mercado-liebre.svg" alt="Logo">
             </div>
-            <form class="search">
+            <form class="search-box">
                 <input type="search" placeholder="Buscar productos, marcas"> <button><i
                         class="fa-solid fa-magnifying-glass"></i></button></input>
             </form>
-            <p id="cuotas"> <i id="cuotas" class="fa-solid fa-hand-holding-dollar"></i>Comprá en cuotas y sin tarjeta de
+            <p class="cuotas"> <i id="cuotas" class="fa-solid fa-hand-holding-dollar"></i>Comprá en cuotas y sin tarjeta de
                 crédito</p>
         </div>
-        <nav>
-            <ul class="navbar">
+        <nav class="nav">
+            <ul class="navbar-site">
                 <li><a href='#'>Ofertas</a></li>
                 <li><a href='#'>Tiendas Oficiales</a></li>
                 <li><a href='.#'>Vender</a></li>
                 <li><a href='.#'>Ayuda</a></li><br>
+            </ul>
+            <ul class="navbar-user">
                 <li><a href='./register'>Creá tu cuenta </a><i class="fa-solid fa-id-card"></i></li>
                 <li><a href='./login'>Ingresá </a><i class="fa-solid fa-arrow-right-to-bracket"></i></li>
                 <li><a href='#'>Mis compras </a><i class="fa-solid fa-basket-shopping"></i></li>
@@ -36,7 +38,6 @@
         <div id="burger-menu">
             <i class="fas fa-bars"></i>
         </div>
-        <br>
     </header>
     <section class="banner">
         <img src="./images/img-home-banner.jpg" alt="banner-ofertas">
@@ -131,28 +132,28 @@
     </main>
     <footer>
         <br>
-        <section>
+        <section class="footer-text">
             <i id="icon-ft" class="fa-solid fa-credit-card fa-xl"></i>
             <h3>Pagá con tarjetas o en efectivo</h3>
             <p>Con Mercado Liebre Cash, tenés cuotas sin interés con tarjeta o efectivo en puntos de pago. ¡Y siempre es
                 seguro!</p>
         </section>
         <br>
-        <section>
+        <section class="footer-text">
             <i id="icon-ft" class="fa-solid fa-gift fa-xl"></i>
             <h3>Envío gratis desde $2.500</h3>
             <p>Solo por estar registrad@ en Mercado Liebre tenés envíos gratis en miles de productos. Es un beneficio de
                 Mercado Puntos</p>
         </section>
         <br>
-        <section>
+        <section class="footer-text">
             <i id="icon-ft" class="fa-solid fa-user-shield fa-xl"></i>
             <h3>Seguridad, de principio a fin</h3>
             <p>¿No te gusta? ¡Devolvelo! En Mercado Liebre, no hay nada que no puedas hacer, porque estás siempre
                 protegid@</p>
         </section>
         <br>
-        <section>
+        <section id="copyright">
             <p>Copyright © 1999-2020 MercadoLiebre S.R.L.</p>
         </section>
     </footer>
