--- a/Mercado-Liebre/public/css/styles.css
+++ b/Mercado-Liebre/public/css/styles.css
@@ -34,32 +34,64 @@ div.top-header {
     display: flex;
     flex-direction: row;
     flex-wrap: wrap;
-    padding: 5%;
+    justify-content: space-around;
+    padding: 15px;
 }
 
 header div.logo {
     width: 44%;
-    padding: 10px;
 }
 
-form.search {
-    padding: 10px;  
+form.search-box {
     width: 44%;
-}
-
-#cuotas {
-    margin-top: 5px;
+    align-self: center;
     text-align: center;
-    align-items: center;
+    position: relative;
 }
 
-.navbar {
+form.search-box input {
+    width: 100%;
+    height: 30px;
+    border-radius: 5px;
+    padding: 8px;
+    border: 0px solid white;
+}
+
+form.search-box button {
+    background-color: white;
+    color: #666;
+    border: 0px;
+    position: absolute;
+    right: 5px;
+    top: 8px;
+}
+
+.cuotas {
+    margin-top: 10px;
+    margin-bottom: 0px;
+    text-align: center;
+    font-size: 12px;
+}
+
+.navbar-site {
     list-style: none;
     padding: 0;
     display: none;
 }
 
-.navbar li a {
+.navbar-site li a {
+    text-decoration: none;
+    color: black;
+    font-size: 12px;
+}
+
+.navbar-user {
+    list-style: none;
+    padding: 0;
+    display: none;    
+}
+
+.navbar-user li a {
     text-decoration: none;
     color: black;
     font-size: 12px;
@@ -71,18 +103,14 @@ form.search {
 }
 
 #burger-menu i {
-    background-color: #1259c3;
-    justify-content: center;
-    text-align: center;
-    display: flex;
+    background-color: #0841a3;
     color: white;
-    border-radius: 8px;
-    font-size: 20px;
+    display: inline-block;
     text-align: center;
-    height: 30px;
-    width: 30px;
-    margin: 10px 0px 10px 0px;
-    padding: 5px;
+    border-radius: 15%;
+    font-size: 20px;
+    margin: 8px 50%;
+    padding: 8px;
 }
 
 section.banner img {
@@ -165,16 +193,74 @@ footer {
     color: #666;
 }
 
+section.footer-text {
+    margin: 20px;
+    padding: 10px;
+}
+
+section.footer-text h3 {
+    margin-top: 10px;
+}
+
 #icon-ft {
     color: #1259c3;
+    font-size: 2em;
+    margin-bottom: 10px;
+}
+
+#copyright {
+    text-align: left;
+    padding: 10px;
 }
 
 /*Breakpoints*/
 @media (min-width: 361px) {
-    .navbar {
+    div.top-header {
+        display: flex;
+        flex-direction: row;
+        flex-wrap: wrap;
+        justify-content: space-around;
+        padding: 15px;
+    }
+    
+    header div.logo {
+        width: 25%;
+    }
+
+    form.search-box {
+        width: 25%;
+        align-self: center;
+        text-align: center;
+        position: relative;
+    }
+
+    .cuotas {
+        width: 40%;
+        margin-top: 20px;
+        margin-bottom: 10px;
+        text-align: center;
+        font-size: 12px;
+    }
+
+    .nav {
+        display: flex;
+        justify-content: space-between;
+    }
+    
+    .navbar-site {
         list-style: none;
-        padding: 0;
-        display: block;
+        padding: 10px;
+        display: flex;
+        justify-content: space-between;
+        gap: 15px;
+    }
+
+    .navbar-user {
+        list-style: none;
+        padding: 10px;
+        display: flex;
+        justify-content: space-between;
+        gap: 15px;
     }
 
     #burger-menu {
@@ -186,6 +272,7 @@ footer {
         display: flex;
         flex-direction: row;
         flex-wrap: wrap;
+        justify-content:space-between;
         margin-bottom: 10px;
     }
 
@@ -195,6 +282,7 @@ footer {
         text-align: center;
         background-color: white;
         box-shadow: 0px 0px 10px rgb(100, 100, 100);
+        margin: 10px;
     }
     
     div.product-detail {
@@ -204,7 +292,7 @@ footer {
         background-color: white;
         display: flex;
         flex-wrap: wrap;
-        padding: 2%;
+        padding: 15px;
     }
 
     .precio {
@@ -224,10 +312,25 @@ footer {
 }
 
 @media (min-width: 769px) {
-    .navbar {
+    .nav {
+        display: flex;
+        justify-content: space-between;
+    }
+    
+    .navbar-site {
         list-style: none;
-        padding: 0;
-        display: block;
+        padding: 10px;
+        display: flex;
+        justify-content: space-between;
+        gap: 15px;
+    }
+
+    .navbar-user {
+        list-style: none;
+        padding: 10px;
+        display: flex;
+        justify-content: space-between;
+        gap: 15px;
     }
 
     #burger-menu {
@@ -257,6 +360,7 @@ footer {
         margin-top: 0px;
         display: flex;
         flex-wrap: wrap;
+        padding: 15px;
     }
 
     .precio {
