--- a/Mercado-Liebre/public/css/register.css
+++ b/Mercado-Liebre/public/css/register.css
@@ -88,7 +88,7 @@ form.search-box button {
 .navbar-user {
     list-style: none;
     padding: 0;
-    display: none;    
+    display: none;
 }
 
 .navbar-user li a {
@@ -119,70 +119,12 @@ section.banner img {
 
 /*Main*/
 
-main h3 {
-    font-size: 24px;
-    color: #666;
-    text-align: left;
-    margin: 10px 0px 10px;
-}
-
-section.products {
+main form {
     display: flex;
     flex-direction: column;
-}
-
-main section img {
-    width: 100%;
-    margin: 0px;
-}
-
-div.product-box {
-    width: 100%;
-    text-align: center;
-    background-color: white;
-    margin-bottom: 10px;
-}
-
-div.product-detail {
-    width: 100%;
-    text-align: center;
-    border-top: 2px solid #ebebeb;
-    background-color: white;
-    margin-top: 0px;
-    display: none;
-    position: relative;
-}
-
-div.product-detail i {
-    display: block;
-    color: #39b54a;
-    font-size: 16px;
-    padding: 5px;
-    width: 30px;
-    height: 30px;
-    border: 1px solid #39b54a;
-    background-color: #FFF;
-    border-radius: 50%;
-    position: absolute;
-    right: 20px;
-    top: -15px;
-}
-
-.precio {
-    text-align: left;
-    font-size: 18px;
-}
-
-.descuento {
-    text-align: left;
-    color: #39b54a;
-    font-size: 16px;
-}
-
-.descripciones {
-    color: #666;
-    text-align: left;
-    font-size: 16px;
+    justify-content: center;
+    align-items: center;
+    width: 50%;
 }
 
 /*Footer*/
@@ -222,7 +164,7 @@ section.footer-text h3 {
         justify-content: space-around;
         padding: 15px;
     }
-    
+
     header div.logo {
         width: 25%;
     }
@@ -246,7 +188,7 @@ section.footer-text h3 {
         display: flex;
         justify-content: space-between;
     }
-    
+
     .navbar-site {
         list-style: none;
         padding: 10px;
@@ -266,48 +208,6 @@ section.footer-text h3 {
     #burger-menu {
         text-align: center;
         display: none;
-    }
-
-    section.products {
-        display: flex;
-        flex-direction: row;
-        flex-wrap: wrap;
-        justify-content:space-between;
-        margin-bottom: 10px;
-    }
-
-    div.product-box {
-        display: block;
-        width: 45%;
-        text-align: center;
-        background-color: white;
-        box-shadow: 0px 0px 10px rgb(100, 100, 100);
-        margin: 10px;
-    }
-    
-    div.product-detail {
-        width: 100%;
-        text-align: center;
-        border-top: 2px solid #ebebeb;
-        background-color: white;
-        display: flex;
-        flex-wrap: wrap;
-        padding: 15px;
-    }
-
-    .precio {
-        width: 50%;
-        padding: 3%;
-    }
-
-    .descuento {
-        width: 50%;
-        padding: 3%;
-    }
-
-    .descripciones {
-        width: 100%;
-        padding: 3%;
     }
 }
 
@@ -316,7 +216,7 @@ section.footer-text h3 {
         display: flex;
         justify-content: space-between;
     }
-    
+
     .navbar-site {
         list-style: none;
         padding: 10px;
@@ -337,54 +237,4 @@ section.footer-text h3 {
         text-align: center;
         display: none;
     }
-
-    section.products {
-        display: flex;
-        flex-direction: row;
-        flex-wrap: wrap;
-    }
-
-    div.product-box {
-        width: 22%;
-        text-align: center;
-        background-color: white;
-        box-shadow: 0px 0px 10px rgb(100, 100, 100);
-    }    
-
-    div.product-detail {
-        display: flex;
-        width: 100%;
-        text-align: center;
-        border-top: 2px solid #ebebeb;
-        background-color: white;
-        margin-top: 0px;
-        display: flex;
-        flex-wrap: wrap;
-        padding: 15px;
-    }
-
-    .precio {
-        width: 50%;
-        padding: 5%;
-    }
-
-    .descuento {
-        width: 50%;
-        padding: 5%;
-    }
-
-    .descripciones {
-        width: 100%;
-        padding: 4%;
-    }
 }
-
-
-/*
-Paleta de colores
-Amarillo: #EAC926;
-Azul: #03264C;
-Celeste: #1259c3;
-Gris oscuro: #666;
-Gris claro: #ebebeb;
-Verde: #39b54a;
