--- a/Mercado-Liebre/views/home.html
+++ b/Mercado-Liebre/views/home.html
@@ -19,7 +19,8 @@
                 <input type="search" placeholder="Buscar productos, marcas"> <button><i
                         class="fa-solid fa-magnifying-glass"></i></button></input>
             </form>
-            <p class="cuotas"> <i id="cuotas" class="fa-solid fa-hand-holding-dollar"></i>Comprá en cuotas y sin tarjeta de
+            <p class="cuotas"> <i id="cuotas" class="fa-solid fa-hand-holding-dollar"></i>Comprá en cuotas y sin tarjeta
+                de
                 crédito</p>
         </div>
         <nav class="nav">
