--- a/Mercado-Liebre/public/css/login.css
+++ b/Mercado-Liebre/public/css/login.css
@@ -123,8 +123,7 @@ main {
     display: flex;
     flex-direction: column;
     justify-content: center;
-    align-items: center;
-    text-align: left;
+    text-align: center;
 }
 
 main h1 {
@@ -134,63 +133,23 @@ main h1 {
 main form {
     display: flex;
     flex-direction: column;
-    justify-content: space-between;
     align-items: center;
-    width: 30%;
-    margin-bottom: 30px;
 }
 
 main form input {
     border: 0px;
-    margin: 15px;
+    margin: 10px;
     padding: 5px;
     border-radius: 4px;
     text-align: left;
-    width: 100%;
 }
 
-.label {
-    margin-top: 20px;
-    text-align: left;
-    font-weight: bold;
-    align-self: flex-start;
-}
-
-.profile-box {
-    display: flex;
-    flex-direction: row;
-    flex-wrap: nowrap;
-    align-items: center;
-    justify-content: space-between;
-    width: 100%;
-}
-
-.interests-box {
-    display: flex;
-    flex-direction: column;
-    flex-wrap: nowrap;
-    align-items: center;
-    justify-content: flex-start;
-    width: 100%;
-}
-
-.interests-box div {
-    display: flex;
-    align-items: center;
-    align-self: flex-start;
-    justify-content: center;    
-    flex-wrap: nowrap;
-}
-
-form button {
-    margin-bottom: 10px;
-    width: 100%;
-    border: 1px solid #666;
+main form button {
+    border: 0px;
     border-radius: 4px;
-}
-
-form a {
-    width: 100%;
+    background-color: #0841a3;
+    color: white;
+    width: 30%;   
 }
 
 /*Footer*/
