--- a/Mercado-Liebre/views/register.html
+++ b/Mercado-Liebre/views/register.html
@@ -18,7 +18,7 @@
             </div>
             <form class="search-box">
                 <input type="search" placeholder="Buscar productos, marcas"> <button><i
-                        class="fa-solid fa-magnifying-glass"></i></button></input>
+                        class="fa-solid fa-magnifying-glass"></i></button>  
             </form>
             <p class="cuotas"> <i id="cuotas" class="fa-solid fa-hand-holding-dollar"></i>Comprá en cuotas y sin tarjeta
                 de
@@ -78,7 +78,7 @@
                     <label for="interests">Jugueteria</label>
                 </div>
                 <div><input type="checkbox" name="interests" id="interests" value="Vidasana">
-                    <label for="interests">Vidasana</label></div>
+                    <label for="interests">Vida sana</label></div>
             </div>
 
             <label class="label" for="avatar">Seleccionar una imagen para el perfil:</label>
@@ -117,10 +117,10 @@
                 protegid@</p>
         </section>
         <br>
-        <section id="copyright">
-            <p>Copyright © 1999-2020 MercadoLiebre S.R.L.</p>
-        </section>
     </footer>
+    <section id="copyright">
+        <p>Copyright © 1999-2020 MercadoLiebre S.R.L.</p>
+    </section>
 </body>
 
 </html>
