--- a/Mercado-Liebre/public/css/register.css
+++ b/Mercado-Liebre/public/css/register.css
@@ -58,12 +58,13 @@ form.search-box input {
 }
 
 form.search-box button {
+    width: 10%;
     background-color: white;
     color: #666;
     border: 0px;
     position: absolute;
-    right: 5px;
-    top: 8px;
+    right: 1px;
+    bottom: -10px;
 }
 
 .cuotas {
@@ -136,7 +137,7 @@ main form {
     flex-direction: column;
     justify-content: space-between;
     align-items: center;
-    width: 30%;
+    width: 100%;
     margin-bottom: 30px;
 }
 
@@ -161,8 +162,8 @@ main form input {
     flex-direction: row;
     flex-wrap: nowrap;
     align-items: center;
-    justify-content: space-between;
-    width: 100%;
+    justify-content: flex-start;
+    text-align: left;
 }
 
 .interests-box {
@@ -176,21 +177,33 @@ main form input {
 
 .interests-box div {
     display: flex;
+    flex-direction: row;
     align-items: center;
     align-self: flex-start;
-    justify-content: center;    
+    justify-content: baseline;
     flex-wrap: nowrap;
+    width: 100%;
+}
+
+input#interests {
+    width: 10%;
 }
 
 form button {
+    margin-top: 20px;
     margin-bottom: 10px;
     width: 100%;
-    border: 1px solid #666;
+    height: 30px;
+    border: 0px;
     border-radius: 4px;
+    background-color: #1259c3;
+    color: white;
 }
 
 form a {
     width: 100%;
+    height: 100%;
+    border: 0px;
 }
 
 /*Footer*/
@@ -199,6 +212,8 @@ footer {
     background-color: white;
     text-align: center;
     color: #666;
+    width: 100%;
+    margin: auto;
 }
 
 section.footer-text {
@@ -275,9 +290,122 @@ section.footer-text h3 {
         text-align: center;
         display: none;
     }
+
+    main {
+        display: flex;
+        flex-direction: column;
+        justify-content: center;
+        align-items: center;
+        text-align: left;
+    }
+
+    main h1 {
+        margin: 10px 0px 30px 0px;
+    }
+
+    main form {
+        display: flex;
+        flex-direction: column;
+        justify-content: space-between;
+        align-items: center;
+        width: 30%;
+        margin-bottom: 30px;
+    }
+
+    main form input {
+        border: 0px;
+        margin: 15px;
+        padding: 5px;
+        border-radius: 4px;
+        text-align: left;
+        width: 100%;
+    }
+
+    .label {
+        margin-top: 20px;
+        text-align: left;
+        font-weight: bold;
+        align-self: flex-start;
+    }
+
+    .profile-box {
+        display: flex;
+        flex-direction: row;
+        flex-wrap: nowrap;
+        align-items: center;
+        justify-content: flex-start;
+        text-align: left;
+    }
+
+    .interests-box {
+        display: flex;
+        flex-direction: column;
+        flex-wrap: nowrap;
+        align-items: center;
+        justify-content: flex-start;
+        width: 100%;
+    }
+
+    .interests-box div {
+        display: flex;
+        flex-direction: row;
+        align-items: center;
+        align-self: flex-start;
+        justify-content: baseline;
+        flex-wrap: nowrap;
+        width: 100%;
+    }
+
+    input#interests {
+        width: 10%;
+    }
+
+    form button {
+        margin-top: 20px;
+        margin-bottom: 10px;
+        width: 100%;
+        height: 30px;
+        border: 0px;
+        border-radius: 4px;
+        background-color: #1259c3;
+        color: white;
+    }
+
+    form a {
+        width: 100%;
+        height: 100%;
+        border: 0px;
+    }
 }
 
 @media (min-width: 769px) {
+    div.top-header {
+        display: flex;
+        flex-direction: row;
+        flex-wrap: wrap;
+        justify-content: space-around;
+        padding: 15px;
+    }
+
+    header div.logo {
+        width: 25%;
+    }
+
+    form.search-box {
+        width: 25%;
+        align-self: center;
+        text-align: center;
+        position: relative;
+    }
+
+    .cuotas {
+        width: 40%;
+        margin-top: 20px;
+        margin-bottom: 10px;
+        text-align: center;
+        font-size: 12px;
+    }
+
     .nav {
         display: flex;
         justify-content: space-between;
@@ -302,5 +430,37 @@ section.footer-text h3 {
     #burger-menu {
         text-align: center;
         display: none;
+    }
+
+    footer {
+        background-color: white;
+        text-align: center;
+        color: #666;
+        display: flex;
+    }
+    
+    section.footer-text {
+        margin: 20px;
+        padding: 10px;
+    }
+    
+    section.footer-text h3 {
+        margin-top: 10px;
+    }
+    
+    #icon-ft {
+        color: #1259c3;
+        font-size: 2em;
+        margin-bottom: 10px;
+    }
+    
+    #icon-ft:hover {
+        color: #EAC926;
+    }
+
+    #copyright {
+        text-align: left;
+        padding: 10px;
+        background-color: white;
     }
 }
