--- a/Mercado-Liebre/public/css/styles.css
+++ b/Mercado-Liebre/public/css/styles.css
@@ -88,7 +88,7 @@ form.search-box button {
 .navbar-user {
     list-style: none;
     padding: 0;
-    display: none;    
+    display: none;
 }
 
 .navbar-user li a {
@@ -166,6 +166,11 @@ div.product-detail i {
     position: absolute;
     right: 20px;
     top: -15px;
+    transition: all 450ms;
+}
+
+div.product-detail i:hover {
+    transform: rotateZ(-90deg);
 }
 
 .precio {
@@ -211,6 +216,7 @@ section.footer-text h3 {
 #copyright {
     text-align: left;
     padding: 10px;
+    background-color: white;
 }
 
 /*Breakpoints*/
@@ -222,7 +228,7 @@ section.footer-text h3 {
         justify-content: space-around;
         padding: 15px;
     }
-    
+
     header div.logo {
         width: 25%;
     }
@@ -246,7 +252,7 @@ section.footer-text h3 {
         display: flex;
         justify-content: space-between;
     }
-    
+
     .navbar-site {
         list-style: none;
         padding: 10px;
@@ -272,7 +278,7 @@ section.footer-text h3 {
         display: flex;
         flex-direction: row;
         flex-wrap: wrap;
-        justify-content:space-between;
+        justify-content: space-between;
         margin-bottom: 10px;
     }
 
@@ -281,11 +287,15 @@ section.footer-text h3 {
         width: 45%;
         text-align: center;
         background-color: white;
-        box-shadow: 0px 0px 10px rgb(100, 100, 100);
         margin: 10px;
+        transition: all 450ms;
     }
-    
-    div.product-detail {
+
+    div.product-box:hover {
+        box-shadow: 0px 0px 10px rgb(100, 100, 100);
+    }
+
+    .pd div.product-detail {
         width: 100%;
         text-align: center;
         border-top: 2px solid #ebebeb;
@@ -293,6 +303,11 @@ section.footer-text h3 {
         display: flex;
         flex-wrap: wrap;
         padding: 15px;
+        visibility: hidden;
+    }
+
+    .pd:hover div.product-detail {
+        visibility: visible;
     }
 
     .precio {
@@ -316,7 +331,7 @@ section.footer-text h3 {
         display: flex;
         justify-content: space-between;
     }
-    
+
     .navbar-site {
         list-style: none;
         padding: 10px;
@@ -348,16 +363,18 @@ section.footer-text h3 {
         width: 22%;
         text-align: center;
         background-color: white;
+        transition: all 450ms;
+    }
+
+    div.product-box:hover {
         box-shadow: 0px 0px 10px rgb(100, 100, 100);
-    }    
+    }
 
     div.product-detail {
-        display: flex;
         width: 100%;
         text-align: center;
         border-top: 2px solid #ebebeb;
         background-color: white;
-        margin-top: 0px;
         display: flex;
         flex-wrap: wrap;
         padding: 15px;
@@ -376,6 +393,38 @@ section.footer-text h3 {
     .descripciones {
         width: 100%;
         padding: 4%;
+    }
+
+    footer {
+        background-color: white;
+        text-align: center;
+        color: #666;
+        display: flex;
+    }
+    
+    section.footer-text {
+        margin: 20px;
+        padding: 10px;
+    }
+    
+    section.footer-text h3 {
+        margin-top: 10px;
+    }
+    
+    #icon-ft {
+        color: #1259c3;
+        font-size: 2em;
+        margin-bottom: 10px;
+    }
+    
+    #icon-ft:hover {
+        color: #EAC926;
+    }
+
+    #copyright {
+        text-align: left;
+        padding: 10px;
+        background-color: white;
     }
 }
 
