--- a/Mercado-Liebre/views/home.html
+++ b/Mercado-Liebre/views/home.html
@@ -17,7 +17,7 @@
             </div>
             <form class="search-box">
                 <input type="search" placeholder="Buscar productos, marcas"> <button><i
-                        class="fa-solid fa-magnifying-glass"></i></button></input>
+                        class="fa-solid fa-magnifying-glass"></i></button>
             </form>
             <p class="cuotas"> <i id="cuotas" class="fa-solid fa-hand-holding-dollar"></i>Comprá en cuotas y sin tarjeta
                 de
@@ -48,16 +48,19 @@
         <section class="products">
             <div class="product-box">
                 <img src="./images/img-cafetera-moulinex.jpg" alt="imagen de cafetera">
-                <div class="product-detail">
-                    <i class="fa-solid fa-truck"></i>
-                    <p class="precio">$6.770</p>
-                    <p class="descuento">40% OFF</p>
-                    <br>
-                    <p class="descripciones">Cafetera Moulinex</p>
+                <div class="pd">
+                    <div class="product-detail">
+                        <i class="fa-solid fa-truck"></i>
+                        <p class="precio">$6.770</p>
+                        <p class="descuento">40% OFF</p>
+                        <br>
+                        <p class="descripciones">Cafetera Moulinex</p>
+                    </div>
                 </div>
             </div>
             <div class="product-box">
                 <img src="./images/img-macbook-pro-2019.jpg" alt="imagen de macbook">
+                <div class="pd">
                 <div class="product-detail">
                     <i class="fa-solid fa-truck"></i>
                     <p class="precio">$230.000</p>
@@ -65,9 +68,11 @@
                     <br>
                     <p class="descripciones">MacBook Pro 2019</p>
                 </div>
+                </div>
             </div>
             <div class="product-box">
                 <img src="./images/img-samsung-galaxy-s10.jpg" alt="imagen de Samsung Galaxy">
+                <div class="pd">
                 <div class="product-detail">
                     <i class="fa-solid fa-truck"></i>
                     <p class="precio">$70.500</p>
@@ -75,15 +80,18 @@
                     <br>
                     <p class="descripciones">Samsung Galaxy S10</p>
                 </div>
+                </div>
             </div>
             <div class="product-box">
                 <img src="./images/img-tv-samsung-smart.jpg" alt="imagen de SmartTV">
+                <div class="pd">
                 <div class="product-detail">
                     <i class="fa-solid fa-truck"></i>
                     <p class="precio">$23.200</p>
                     <p class="descuento">5% OFF</p>
                     <br>
                     <p class="descripciones">SmartTV Samsung 43"</p>
+                </div>
                 </div>
             </div>
         </section>
@@ -91,6 +99,7 @@
         <section class="products">
             <div class="product-box">
                 <img src="./images/img-cafetera-moulinex.jpg" alt="imagen de cafetera">
+                <div class="pd">
                 <div class="product-detail">
                     <i class="fa-solid fa-truck"></i>
                     <p class="precio">$6.770</p>
@@ -98,9 +107,11 @@
                     <br>
                     <p class="descripciones">Cafetera Moulinex</p>
                 </div>
+                </div>
             </div>
             <div class="product-box">
                 <img src="./images/img-macbook-pro-2019.jpg" alt="imagen de macbook">
+                <div class="pd">
                 <div class="product-detail">
                     <i class="fa-solid fa-truck"></i>
                     <p class="precio">$230.000</p>
@@ -108,9 +119,11 @@
                     <br>
                     <p class="descripciones">MacBook Pro 2019</p>
                 </div>
+                </div>
             </div>
             <div class="product-box">
                 <img src="./images/img-samsung-galaxy-s10.jpg" alt="imagen de Samsung Galaxy">
+                <div class="pd">
                 <div class="product-detail">
                     <i class="fa-solid fa-truck"></i>
                     <p class="precio">$70.500</p>
@@ -118,15 +131,18 @@
                     <br>
                     <p class="descripciones">Samsung Galaxy S10</p>
                 </div>
+                </div>
             </div>
             <div class="product-box">
                 <img src="./images/img-tv-samsung-smart.jpg" alt="imagen de SmartTV">
+                <div class="pd">
                 <div class="product-detail">
                     <i class="fa-solid fa-truck"></i>
                     <p class="precio">$23.200</p>
                     <p class="descuento">5% OFF</p>
                     <br>
                     <p class="descripciones">SmartTV Samsung 43"</p>
+                </div>
                 </div>
             </div>
         </section>
@@ -154,10 +170,10 @@
                 protegid@</p>
         </section>
         <br>
-        <section id="copyright">
-            <p>Copyright © 1999-2020 MercadoLiebre S.R.L.</p>
         </section>
     </footer>
+    <section id="copyright">
+        <p>Copyright © 1999-2020 MercadoLiebre S.R.L.</p>
 </body>
 
 </html>
