--- a/Mercado-Liebre/public/css/register.css
+++ b/Mercado-Liebre/public/css/register.css
@@ -243,6 +243,7 @@ section.footer-text h3 {
         flex-direction: row;
         flex-wrap: wrap;
         justify-content: space-around;
+        align-items: center;
         padding: 15px;
     }
 
@@ -258,7 +259,7 @@ section.footer-text h3 {
     }
 
     .cuotas {
-        width: 40%;
+        width: 25%;
         margin-top: 20px;
         margin-bottom: 10px;
         text-align: center;
@@ -384,6 +385,7 @@ section.footer-text h3 {
         flex-direction: row;
         flex-wrap: wrap;
         justify-content: space-around;
+        align-items: center;
         padding: 15px;
     }
 
@@ -399,7 +401,7 @@ section.footer-text h3 {
     }
 
     .cuotas {
-        width: 40%;
+        width: 25%;
         margin-top: 20px;
         margin-bottom: 10px;
         text-align: center;
